k8s-files/kubernetes/examples/es-istio/istio_config/gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway-external
  namespace: loadbalancer-external
spec:
  selector:
    istio: loadbalancer-external # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Domain name of external website
